# echo-chamber-score

./: .gitignore  LICENSE  README.md  environment.yml  expriemnt_1_measure_ec.ipynb  expt_1_echo_chamber_score.ipynb  expt_2_ideology_detection.ipynb  ideology_detection.ipynb  main.ipynb  main_old.ipynb  mainy.ipynb  pyproject.toml  requirements.txt
data/: readme.md
data/abortion/: allsides.feather  graph.gml
data/gun/: allsides.feather  graph.gml
data/super_bowl/: allsides.feather  graph.gml
data/sxsw/: allsides.feather  graph.gml
src/: EchoGAE.py  GAE.py  echo_chamber_measure.py  load_data.py  remove_ideology_detection.py  tweet_preprocessing.py
src/allside_labeling/: allsides.py
src/baselines/: RWC.py  RWC_jit.py  polarization_index.py
