[tool.poetry]
name = "echo-chamber-score"
version = "0.1.0"
description = "Method to measure echo chamber and polarization"
authors = ["Faisal Alatawi <faalataw@asu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "echo_chamber_score"}]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
pandas = "^2.0.3"
jupyterlab = "^4.0.2"
sentence-transformers = "^2.2.2"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
emoji = "^2.6.0"
pyarrow = "^12.0.1"
numba = "^0.57.1"
numpy = "^1.24.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
